User location and search from beta release

--- a/app/views/shared/_newheader.html.erb
+++ b/app/views/shared/_newheader.html.erb
@@ -26,7 +26,7 @@
 					<span id="near-text">near</span>
 				</div>
 				<div class="span2">
-						<%= text_field_tag :search_from, "", :placeholder => "City State Zip or Name", :class => "input-medium search-query", 
+						<%= text_field_tag :search_from, "", :placeholder => last_from_text, :class => "input-medium search-query", 
 																					:id => "cannaenginetext-small" %>
 				</div>
 				<div class="span1">
