--- a/app/views/dispensaries/search.html.erb
+++ b/app/views/dispensaries/search.html.erb
@@ -7,10 +7,9 @@
 <div class="row">  
 	<div class="span8">
 		<% unless @featured.nil? %>
-			<%= render( "dispensaries/featured", dispensary: @featured ) %>
-		<% end %>
-		<% unless @first_sub_featured.nil? %>
-			<%= render( "dispensaries/featured", dispensary: @first_sub_featured ) %>
+			<% @featured.each do |f| %>
+				<%= render( "dispensaries/featured", dispensary: f ) %>
+			<% end %>
 		<% end %>
 		<% @dispensaries.each do |d| %>
 			<%= render "dispensaries/dispensary", dispensary: d %>
