Updates to look and feel

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -238,14 +238,14 @@ tr:hover{
 
 .btn-custom{
 	height:60px;
-	width:55px;
+	width:63px;
 	margin-left: -10px;
-	background-color: #1a9246;
+	background-color: #129100;
 	color: white;
 	border: none;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
+	-webkit-border-radius: 0px;
+	-moz-border-radius: 0px;
+	border-radius: 0px;
 	-webkit-box-shadow: 5px 5px 10px rgba(50, 50, 50, 0.31);
 	-moz-box-shadow: 5px 5px 10px rgba(50, 50, 50, 0.31);
 	box-shadow: 5px 5px 10px rgba(50, 50, 50, 0.31);
@@ -263,15 +263,15 @@ tr:hover{
 }
 
 @-webkit-keyframes findhover {
-from { background-color: #1a9246; -webkit-box-shadow: 0 0 9px #333; }
+from { background-color: #129100; -webkit-box-shadow: 0 0 9px #333; }
 50% { background-color: #76af4e; -webkit-box-shadow: 0 0 18px #91bd09; }
-to { background-color: #1a9246; -webkit-box-shadow: 0 0 9px #333; }
+to { background-color: #129100; -webkit-box-shadow: 0 0 9px #333; }
 }
 
 @-moz-keyframes findhover {
-from { background-color: #1a9246; -moz-box-shadow: 0 0 9px #333; }
+from { background-color: #129100; -moz-box-shadow: 0 0 9px #333; }
 50% { background-color: #76af4e; -moz-box-shadow: 0 0 18px #91bd09; }
-to { background-color: #1a9246; -moz-box-shadow: 0 0 9px #333; }
+to { background-color: #129100; -moz-box-shadow: 0 0 9px #333; }
 }
 
 #listingsingle-map-address{
@@ -318,7 +318,7 @@ to { background-color: #1a9246; -moz-box-shadow: 0 0 9px #333; }
 }
 #main-search-container {
 	height: 100%;
-	padding-top: 17px;
+	padding-top: 24px;
 }
 #near-text {
 	color: white;
@@ -328,7 +328,7 @@ to { background-color: #1a9246; -moz-box-shadow: 0 0 9px #333; }
 	left: 7px;
 }
 #header-links {
-	padding-top: 28px;
+	padding-top: 14px;
 }
 #search-bottom {
 
@@ -1432,7 +1432,8 @@ a:hover{
 	background-repeat: repeat-x;
 	background-color: #006012;
 	margin-top: 0em;
-	height: 165px;
+	height: 158px;
+	background-image:url('/images/site/headerbg.png');
 	-webkit-box-shadow: 5px 5px 10px rgba(50, 50, 50, 0.31);
 	-moz-box-shadow: 5px 5px 10px rgba(50, 50, 50, 0.31);
 	box-shadow: 5px 5px 10px rgba(50, 50, 50, 0.31);
