--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,7 +1,7 @@
       <div id="cannacarouseltop" class="carousel slide">
         <!-- Carousel items -->
         <div class="carousel-inner">
-          <div class="active item"><%= image_tag "http://www.placekitten.com/640/250" %></div>
+          <div class="active item"><%= image_tag "/images/slider/carousel_critiques.jpg" %></div>
           <div class="item"><%= image_tag "http://www.placekitten.com/640/250" %></div>
         </div>
           <!-- Carousel nav -->
