Added photo management for listing, volumes and critiques

--- a/app/views/critiques/_critique_exerpt.html.erb
+++ b/app/views/critiques/_critique_exerpt.html.erb
@@ -2,7 +2,7 @@
 	<div class="span9">
 	  <div class="row">
 	    <div class="span4">
-	      <%= image_tag critique.photo_url, size: "300x300" %>
+	      <%= image_tag critique.photo(:large) %>
 	    </div>
 	    <div class="span5">
 	      <h3><%= critique.title %></h3>
