--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -2,7 +2,7 @@
         <!-- Carousel items -->
         <div class="carousel-inner">
           <div class="active item"><%= image_tag "/images/slider/carousel_critiques.jpg" %></div>
-          <div class="item"><%= image_tag "http://www.placekitten.com/640/250" %></div>
+          <div class="item"><%= image_tag "/images/slider/carousel_dispatches.jpg" %></div>
         </div>
           <!-- Carousel nav -->
           <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
