Done for the night

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -5,6 +5,10 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 
 /* begin header */
 
+#search-results-container {
+	padding-left: 7px;
+}
+
 .top-links {
 	list-style: none;
 	float: left;
