--- a/app/views/dispensaries/search.html.erb
+++ b/app/views/dispensaries/search.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <div class="row">  
-	<div class="span8">
+	<div id="search-results-container" class="span8">
 		<% unless @featured.nil? %>
 			<% @featured.each do |f| %>
 				<%= render( "dispensaries/featured", dispensary: f ) %>
