--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,10 +1,9 @@
       <div id="cannacarouseltop" class="carousel slide">
         <!-- Carousel items -->
         <div class="carousel-inner">
-          <div class="active item"><%= image_tag "/images/slider/carousel_critiques.jpg" %></div>
-          <div class="item"><%= image_tag "/images/slider/carousel_dispatches.jpg" %></div>
+          <div class="active item"><%= link_to( image_tag("/images/slider/carousel_critiques.jpg"),
+																								critiques_path ) %></div>
+          <div class="item"><%= link_to( image_tag("/images/slider/carousel_dispatches.jpg"),
+																								current_volume_path ) %></div>
         </div>
-          <!-- Carousel nav -->
-          <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-          <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
       </div>
