--- a/app/views/dispensaries/_icons.html.erb
+++ b/app/views/dispensaries/_icons.html.erb
@@ -1,9 +1,13 @@
-    <div class="span3 listingicons">
-			    <%= image_tag "menuicons-01.png" %>
-			    <%= image_tag "menuicons-02.png" %>
-			    <%= image_tag "menuicons-03.png" %>
-			    <%= image_tag "menuicons-04.png" %> 
-	    </div>
-	    <button class="span2 btn btn-large btn-success listbtn">
-	    <%= link_to "See Full Listing", dispensary_path( dispensary ) %>
-	    </button>
+<div class="span3 listingicons">
+	<%= image_tag "menuicons-01.png" %>
+	<%= image_tag "menuicons-02.png" %>
+	<%= image_tag "menuicons-03.png" %>
+	<%= image_tag "menuicons-04.png" %> 
+</div>
+<div class="span3">
+	<a href="dispensaries/<%= dispensary.id %>">
+		<button class="span2 btn btn-large btn-success listbtn">
+			<span>See Full Listing</span>
+		</button>
+	</a>
+</div>
