--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,6 +1,6 @@
 /* RESET THE BITCH */
 /* html5doctor.com Reset v1.6.1 - http://cssreset.com */
-html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}nav ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent}ins{background-color:#ff9;color:#000;text-decoration:none}mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold}del{text-decoration:line-through}abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}table{border-collapse:collapse;border-spacing:0}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}input,select{vertical-align:middle}
+html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;vertical-align:baseline;background:transparent}body{line-height:1}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}nav ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent}ins{background-color:#ff9;color:#000;text-decoration:none}mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold}del{text-decoration:line-through}abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}table{border-collapse:collapse;border-spacing:0}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}input,select{vertical-align:middle}
 /******************************/
 
 /* begin header */
@@ -26,15 +26,18 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 	top: 21px;
 	left: 32px;
 	border: 0px;
+	background-color: #129100;
 	p {
 		color: white;
 		font-size: 100%;
 		font-weight: bold;
 		border: 0px;
-		background-color: #06700B;
 		&:hover {
-			background-color: #006012;
+			background-color: #06700B;
 		}
+	}
+	li {
+		padding: 5px;
 	}
 }
 
@@ -53,6 +56,16 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 }
 
 /* end header */
+
+/* begin critiques */
+
+.critiques-container {
+	border-bottom: thin solid gray;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+/* end critiques */
 
 /* begin misc unsorted */
 
@@ -335,6 +348,11 @@ to { background-color: #129100; -moz-box-shadow: 0 0 9px #333; }
 	position: relative;
 }
 
+#main2-find-btn {
+	left: -22px;
+	position: relative;
+}
+
 #searchoptions{
 	margin-left: 27px;
 	margin-top: 12px;
@@ -366,8 +384,7 @@ to { background-color: #129100; -moz-box-shadow: 0 0 9px #333; }
 #search-bottom {
 
 }
-#cannaenginetext-big{
-	width: 320px;
+#cannaenginetext-big {
 	height: 40px;
 	font-size: 16pt;
 	font-weight: 400;
@@ -375,6 +392,12 @@ to { background-color: #129100; -moz-box-shadow: 0 0 9px #333; }
 	top: 5px;
 }
 
+.med-search {
+	width: 320px;
+}
+.big-search {
+	width: 547px;
+}
 .backendwrap{
 	width: 1170px;
 	margin: auto;
@@ -1680,6 +1703,7 @@ a:hover{
 	font-size: 2em;
   line-height:2em;
   border-bottom:1px black solid;
+	color: black;
 }
 
 .article-exerpt-container {
