--- a/app/views/critiques/_critique_exerpt.html.erb
+++ b/app/views/critiques/_critique_exerpt.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="span9">
+	<div class="span9 critiques-container">
 	  <div class="row">
 	    <div class="span4">
 	      <%= image_tag critique.photo(:large) %>
