--- a/app/views/shared/_newheader.html.erb
+++ b/app/views/shared/_newheader.html.erb
@@ -18,42 +18,13 @@
 			</div>
 		</div>
 		<div class="span9">
-
-			<div class="row">
-					<%= form_tag dispensary_search_path, :method => :put, class: "form-search", id: "main-search-container" do %>
-				<div class="span4">
-					<%= text_field_tag :search_term, "", :placeholder => "Name or category (e.g. The Grow House, dispensary, etc)",
-																							 :class => "input-medium search-query", :id => "cannaenginetext-big" %>
-				</div>
-				<div class="spane1">
-					<span id="near-text">near</span>
-				</div>
-				<div class="span2">
-						<%= text_field_tag :search_from, "", :placeholder => params[:last_location], :class => "input-medium search-query", 
-																					:id => "cannaenginetext-small" %>
-						<%= hidden_field_tag :category, "All", id: "send-cat" %>
-				</div>
-				<div class="span1">
-						<button type="submit" class="btn-custom" id="main-find-btn"><%= image_tag "/images/icons/magglass.png" %></button>
-				</div>
-					<% end %>
-			</div>
+			
+			<%= render @search_partial %>      
 
 			<div class="row" id="search-bottom">
-				<div class="span3">
-					<div class="dropdown">
-					<%= link_to( image_tag( "/images/icons/browse-top.png", id: "cat-select" ),
-																	"#", class: "dropdown-toggle" ) %>
-						<ul class="dropdown-menu cat-select-menu" role="menu" aria-labelledby="dLabel">
-							<li class="cat-select-btn"><p>All Categories</p></li>
-							<li class="cat-select-btn"><p>Dispensaires</p></li>
-							<li class="cat-select-btn"><p>Grow Stores</p></li>
-							<li class="cat-select-btn"><p>Head Shops</p></li>
-							<li class="cat-select-btn"><p>Kind Doctors</p></li>
-							<li class="cat-select-btn"><p>Kind Landlords</p></li>
-						</ul>
-					</div>	
-				</div>
+					<div class="span3">
+						<%= render "searches/#{params[:controller]}_cat" %>
+					</div>
 				<div class="span5" id="header-links">
 
 					<% if params[:controller] == "dispensaries" %>
