Updated look and feel

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -63,6 +63,7 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 	border-bottom: thin solid gray;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	padding-left: 20px;
 }
 
 /* end critiques */
