--- a/app/views/searches/_dispensaries_cat.html.erb
+++ b/app/views/searches/_dispensaries_cat.html.erb
@@ -4,6 +4,9 @@
 	<ul class="dropdown-menu cat-select-menu" role="menu" aria-labelledby="dLabel">
 		<li class="cat-select-btn"><p>All Categories</p></li>
 		<li class="cat-select-btn"><p>Dispensaires</p></li>
-		<li class="cat-select-btn"><p>Strains</p></li>
+		<li class="cat-select-btn"><p>Grow Stores</p></li>
+		<li class="cat-select-btn"><p>Head Shops</p></li>
+		<li class="cat-select-btn"><p>Kind Doctors</p></li>
+		<li class="cat-select-btn"><p>Kind Land Lords</p></li>
 	</ul>
 </div>	
