Honestly lost track ready to start again fresh plate

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -5,6 +5,14 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 
 /* begin header */
 
+.hidden {
+	visibility: hidden;
+}
+
+#tipytop {
+	background-color: rgba( 256, 256, 256, 0.7 )
+}
+
 #cat-container {
 	position: relative;
 	width: 500px;
