--- a/app/views/dispensaries/search.html.erb
+++ b/app/views/dispensaries/search.html.erb
@@ -2,6 +2,9 @@
 	<div class="span8">
 		<%= render "shared/banner" %>
 	</div>
+	<div class="span4">
+		<%= link_to( image_tag("/images/site/roorgiveraway.jpg"), "#create_user_modal", "data-toggle" => :modal ) %>
+	</div>
 </div>
 
 <div class="row">  
