--- a/app/views/searches/_volumes_cat.html.erb
+++ b/app/views/searches/_volumes_cat.html.erb
@@ -1,4 +1,5 @@
-<div class="dropdown">
+<% catClass = (params[:controller] == "volumes") ? "hidden" : "" %>
+<div class="dropdown <%= catClass %>">
 <%= link_to( image_tag( "/images/icons/browse-top.png", id: "cat-select" ),
 												"#", class: "dropdown-toggle" ) %>
 	<ul class="dropdown-menu cat-select-menu" role="menu" aria-labelledby="dLabel">
