--- a/app/views/shared/_newheader.html.erb
+++ b/app/views/shared/_newheader.html.erb
@@ -1,6 +1,6 @@
 <div id="header">
 
-	<div class="row">
+	<div class="row" id="tipytop">
 		<div class="span7 offset5">
 			<ul class="top-links">
   			<li><%= login_or_backend %>
@@ -14,7 +14,8 @@
   	<div class="span3">
 			<div id="cat-container">
 				<%= image_tag "top-logo.png" %>
-				<p id="cat-text">Browse <span id="cat-text-value">All Categories</span></p>
+				<% catClass = (params[:controller] == "volumes") ? "hidden" : "" %>
+				<p id="cat-text" class="<%= catClass %>">Browse <span id="cat-text-value">All Categories</span></p>
 			</div>
 		</div>
 		<div class="span9">
