--- a/app/views/cadets/user_profile.html.erb
+++ b/app/views/cadets/user_profile.html.erb
@@ -22,7 +22,7 @@
       <div class="span7" id="profilerecent">
         <ul>
           <!--recent user posts and reviews feed-->
-          <li><img src="http://placehold.it/700x300"></li>
+          <li><img src="http://placekitten/700/300"></li>
           <li><img src="http://placehold.it/700x300"></li>
         </ul>
       </div>
