--- a/app/views/layouts/cadets.html.erb
+++ b/app/views/layouts/cadets.html.erb
@@ -23,6 +23,7 @@
       <%= render "shared/flash", flash: flash %>
       <%= yield %>
     </div>
+		<%= image_tag "http://placekitten.com/728/90", id: "btobad" %>
   </div>
   
   <%= render "modals/the_path_placeholder" %>
