--- a/app/views/dispensaries/search.html.erb
+++ b/app/views/dispensaries/search.html.erb
@@ -3,7 +3,7 @@
 		<%= render "shared/banner" %>
 	</div>
 	<div class="span4">
-		<%= link_to( image_tag("/images/site/roorgiveraway.jpg"), "#create_user_modal", "data-toggle" => :modal ) %>
+		<%= link_to( image_tag("/images/site/roor.jpg", id: "home-top-right"), "#create_user_modal", "data-toggle" => :modal ) %>
 	</div>
 </div>
 
