--- a/app/views/shared/_five_star_featured.html.erb
+++ b/app/views/shared/_five_star_featured.html.erb
@@ -11,5 +11,7 @@
 
   <h5>Fans: 20</h5>
   <h5>Last Updated: <%= dispensary.updated_at %></h5>
-	<%= render "see_btn", dispensary: dispensary %>
+	<div class="featured-view-btn">
+		<%= render "see_btn", dispensary: dispensary %>
+	</div>
 </div>
