--- a/app/views/dispensaries/search.html.erb
+++ b/app/views/dispensaries/search.html.erb
@@ -25,3 +25,5 @@
 		<div class="home-add-right"><%= image_tag "http://placekitten.com/250/250" %></div>
 	</div>
 </div>
+
+<%= paginate @dispensaries, :params => { controller: 'dispensaries', action: 'search' } %>
