--- a/app/views/dispensaries/_see_btn.html.erb
+++ b/app/views/dispensaries/_see_btn.html.erb
@@ -1,5 +1,5 @@
 <div class="span3">
-	<a href="dispensaries/<%= dispensary.id %>">
+	<a href="/dispensaries/<%= dispensary.id %>">
 		<button class="span2 btn btn-large btn-success listbtn">
 			<span>See Full Listing</span>
 		</button>
