--- a/app/views/articles/_single_for_index.html.erb
+++ b/app/views/articles/_single_for_index.html.erb
@@ -1,4 +1,4 @@
 <div class="span8">
   <%= link_to article.title, article, class: "article-title" %>
-  <p><%= article.exerpt %></p>
+  <p><%=raw article.exerpt %></p>
 </div>
