--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -89,7 +89,8 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
  
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+		background-color: #006012;
+    -webkit-box-shadow: inset 0 0 6px green; 
 }
 
 .pagination {
