--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,6 +1,9 @@
+<% content_id = article.id %>
+<% content_id ||= "create" %>
+
 <%= simple_form_for article do |f| %>
-    <%= f.input :title, :label => 'Title' %>
-    <%= f.input :content, :label => 'Content' %>
-    <%= f.button :submit, class: "btn-success" %>
-    <%= link_to "Close", "#", class: :btn, "data-dismiss" => "modal" %>
+	<%= f.input :title, :label => 'Title' %>
+	<%= f.input :content, :label => 'Content', input_html: {class: "tinymce", id: "article-content-#{content_id}"} %>
+	<%= f.button :submit, class: "btn-success" %>
+	<%= link_to "Close", "#", class: :btn, "data-dismiss" => "modal" %>
 <% end %>
