--- a/app/views/critiques/_critique_exerpt.html.erb
+++ b/app/views/critiques/_critique_exerpt.html.erb
@@ -6,7 +6,7 @@
 	    </div>
 	    <div class="span5">
 	      <h3><%= critique.title %></h3>
-        <p><%= critique.content %></p>
+        <p><%=raw critique.content %></p>
       </div>
     </div>
   </div>
