--- a/app/views/layouts/cadets.html.erb
+++ b/app/views/layouts/cadets.html.erb
@@ -29,7 +29,7 @@
 				<%= image_tag "http://placekitten.com/728/90", id: "btobad" %>
 			</div>
   </div>
-  
+	<%= tinymce %>  
   <%= render "modals/the_path_placeholder" %>
 </body>
 </html>
