Added roachy lessons backend api

--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -23,16 +23,16 @@
 					<%= image_tag "/images/site/roachy-large.jpg" %>
 					<h3>Hello I'm Roachy Clippits lesser known brother</h3>
 					<ul id="roachy-lesson-1" class="roachy-lesson roachy-active">
-						<li><h3>Subject: Roachy Basics</h3></li>
-						<li>Thinking from within this box I will guid you through the CannaPages journey</li>
-						<li>You can dismis my lectures once you learn them</li>
-						<li>Thinking from within this box I will guid you through the CannaPages journey</li>
-						<li>Thinking from within this box I will guid you through the CannaPages journey</li>
-						<li>You can dismis my lectures once you learn them</li>
-						<li>Thinking from within this box I will guid you through the CannaPages journey</li>
-						<li>Thinking from within this box I will guid you through the CannaPages journey</li>
-						<li>Thinking from within this box I will guid you through the CannaPages journey</li>
-						<li>You can dismis my lectures once you learn them</li>
+						<h3>Subject: Roachy Basics</h3>
+						<p>Thinking from within this box I will guid you through the CannaPages journey</li>
+						You can dismis my lectures once you learn them
+						Thinking from within this box I will guid you through the CannaPages journey
+						Thinking from within this box I will guid you through the CannaPages journey
+						You can dismis my lectures once you learn them</p>
+						</p>Thinking from within this box I will guid you through the CannaPages journey
+						Thinking from within this box I will guid you through the CannaPages journey
+						Thinking from within this box I will guid you through the CannaPages journey</li>
+						You can dismis my lectures once you learn them</p>
 					</ul>
 					<ul id="roachy-lesson-2" class="roachy-lesson roachy-inactive">
 						<li><h3>Subject: Managing Comments and reviews</h3></li>
